Increase image queue throughput